# harbour-fernschreiber

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  harbour-fernschreiber.desktop  harbour-fernschreiber.pro
.github/workflows/: main.yml
db/: emojis.db
doc/: emojis.md
privileges/: harbour-fernschreiber.privileges
qml/: harbour-fernschreiber.qml
qml/components/: AppNotification.qml  AppNotificationItem.qml  AudioPreview.qml  BackgroundImage.qml  BackgroundProgressIndicator.qml  ChatListViewItem.qml  ContactSync.qml  DocumentPreview.qml  GamePreview.qml  ImagePreview.qml  ImageThumbnail.qml  InReplyToRow.qml  InformationEditArea.qml  InformationTextItem.qml  InlineQuery.qml  LocationPreview.qml  MessageListViewItem.qml  MessageListViewItemSimple.qml  MessageOverlayFlickable.qml  MessageViaLabel.qml  MultilineEmojiLabel.qml  PhotoTextsListItem.qml  PinnedMessageItem.qml  PollPreview.qml  PressEffect.qml  ProfilePictureList.qml  ProfileThumbnail.qml  ReactionButton.qml  ReplyMarkupButtons.qml  StickerPicker.qml  StickerPreview.qml  StickerSetOverlay.qml  TDLibImage.qml  TDLibMinithumbnail.qml  TDLibPhoto.qml  TDLibThumbnail.qml  VideoPreview.qml  VoiceNoteOverlay.qml  WebPagePreview.qml
qml/components/chatInformationPage/: ChatInformationEditArea.qml  ChatInformationPageContent.qml  ChatInformationProfilePicture.qml  ChatInformationProfilePictureList.qml  ChatInformationTabItemBase.qml  ChatInformationTabItemDebug.qml  ChatInformationTabItemMembersGroups.qml  ChatInformationTabItemSettings.qml  ChatInformationTabView.qml  ChatInformationTextItem.qml  (+2 more)
qml/js/: debug.js  functions.js  functionsOld.js  twemoji.js
qml/pages/: AboutPage.qml  ActiveSessionsPage.qml  ChatInformationPage.qml  ChatPage.qml  ChatSelectionPage.qml  CoverPage.qml  DebugPage.qml  ImagePage.qml  InitializationPage.qml  MediaAlbumPage.qml  NewChatPage.qml  OverviewPage.qml  PollCreationPage.qml  PollResultsPage.qml  SearchChatsPage.qml  SettingsPage.qml  VideoPage.qml
rpm/: harbour-fernschreiber.changes  harbour-fernschreiber.changes.in  harbour-fernschreiber.changes.run.in  harbour-fernschreiber.spec  harbour-fernschreiber.yaml
src/: appsettings.cpp  appsettings.h  boolfiltermodel.cpp  boolfiltermodel.h  chatlistmodel.cpp  chatlistmodel.h  chatmodel.cpp  chatmodel.h  chatpermissionfiltermodel.cpp  chatpermissionfiltermodel.h  contactsmodel.cpp  contactsmodel.h  dbusadaptor.cpp  dbusadaptor.h  dbusinterface.cpp  dbusinterface.h  debuglog.h  debuglogjs.h  emojisearchworker.cpp  emojisearchworker.h  fernschreiberutils.cpp  fernschreiberutils.h  harbour-fernschreiber.cpp  knownusersmodel.cpp  knownusersmodel.h  mceinterface.cpp  mceinterface.h  namedaction.cpp  namedaction.h  notificationmanager.cpp  notificationmanager.h  processlauncher.cpp  processlauncher.h  stayawakeadaptor.cpp  stayawakeadaptor.h  stayawakeinterface.cpp  stayawakeinterface.h  stickermanager.cpp  stickermanager.h  tdlibfile.cpp  (+10 more)
translations/: harbour-fernschreiber-de.ts  harbour-fernschreiber-en.ts  harbour-fernschreiber-es.ts  harbour-fernschreiber-fi.ts  harbour-fernschreiber-fr.ts  harbour-fernschreiber-hu.ts  harbour-fernschreiber-it.ts  harbour-fernschreiber-pl.ts  harbour-fernschreiber-ru.ts  harbour-fernschreiber-sk.ts  harbour-fernschreiber-sv.ts  harbour-fernschreiber-zh_CN.ts  harbour-fernschreiber.ts
(+51 files in other folders)
